src/main/webapp/static/css/home.css
.control-group{
	width: 100%;
	margin-left: 47%;
}


.field-control{
	width:380px;
	
}

.form-control{
	/* margin-left: 16%; */
	width:380;
	height:32;
	border-radius: 7px;
	border: 1px solid gray;
	/* -moz-box-shadow: 0 0 1px 1px #888;
	-webkit-box-shadow: 0 0 1px 1px#888;
	box-shadow: 0 0 1px 1px #888; */
	
}

textarea
{
	/* margin-left: 16%; */
	width:380;
	border-radius: 7px;
	border: 1px solid gray;
/* 	-moz-box-shadow: 0 0 1px 1px #888;
	-webkit-box-shadow: 0 0 1px 1px#888;
	box-shadow: 0 0 1px 1px #888; */
}

.help-block
{
	color:red;
}

.lbl{
	font-weight: bold;
	font-size: 11pt;
	margin-left: -50%;
}

.lbl2{
	font-weight: bold;
	margin-left: -60%;
	font-size: 11pt;
	margin-top:25%;
}

.form-container{
	position:relative;
	width:700px;
	border: 1px solid #d6d6d6;
	background-color: #F0F0F0;
	border-radius: 12px;
}

.gridStyle {
	
    border: 1px solid rgb(212,212,212);
    width: 570px; 
    height: 250px;
}

#designations, #name{
	color: black;
	position:absolute;
	left:64px;
	top:70px;
}

#candidateName{
	color: black;
	position:absolute;
	left:64px;
	top:70px;
}

#searchBtn{
	position:absolute;
	top:72px;
	right:180px;

}

#searcCanhBtn{
	position:absolute;
	top:8px;
	right:175px;
}

.form-container-mg{
	/* position:relative; */
	width:700px;
	height:50px;
	border: 1px solid #d6d6d6;
	background-color: #F0F0F0;
	border-radius: 12px;
}

